<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dimen_16"
    android:layout_marginTop="@dimen/dimen_8"
    android:layout_marginEnd="@dimen/dimen_16"
    android:layout_marginBottom="@dimen/dimen_8"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/dimen_16"
    app:cardElevation="@dimen/dimen_16"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16">

        <TextView
            android:id="@+id/cardone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:elevation="@dimen/dimen_16"
            android:text="@string/deepak"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_18_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/one_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:elevation="@dimen/dimen_16"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/_9th_buildind_2nd_floor_maldiv_road_manali_9th_buildind_2nd_floor_9th_buildind_2nd_floor"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/one_img"
            app:layout_constraintTop_toBottomOf="@id/cardone_text" />


        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dimen_16"
            android:text="@string/_16_40"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/one_img"
            android:layout_width="@dimen/dimen_64"
            android:layout_height="@dimen/dimen_64"
            android:background="@drawable/shape_"
            android:elevation="@dimen/dimen_16"
            android:src="@drawable/ic_boy"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/lin_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_16"
            android:background="@drawable/shape_rounded_rect"
            android:elevation="@dimen/dimen_16"
            android:orientation="horizontal"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            app:layout_constraintEnd_toStartOf="@id/lin_distance"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/one_img"
            app:layout_constraintTop_toBottomOf="@id/one_img">

            <ImageView
                android:id="@+id/img_battery"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_battery" />

            <TextView
                android:id="@+id/battery_percent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:text="@string/_90" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_16"
            android:elevation="@dimen/dimen_16"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/lin_wifi"
            app:layout_constraintStart_toEndOf="@id/lin_battery"
            app:layout_constraintTop_toBottomOf="@id/one_img">

            <ImageView
                android:id="@+id/img_distance"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:elevation="@dimen/dimen_16"
                android:src="@drawable/email"
                app:layout_constraintStart_toEndOf="@id/lin_battery"
                app:layout_constraintTop_toBottomOf="@id/one_img" />

            <TextView
                android:id="@+id/distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="223M"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/img_battery"
                app:layout_constraintStart_toEndOf="@id/img_distance"
                app:layout_constraintTop_toTopOf="@id/img_battery" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:elevation="@dimen/dimen_16"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/lin_battery"
            app:layout_constraintEnd_toStartOf="@id/call"
            app:layout_constraintStart_toEndOf="@id/lin_distance"
            app:layout_constraintTop_toTopOf="@id/lin_battery">


            <ImageView
                android:id="@+id/img_wifi"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:elevation="@dimen/dimen_16"
                android:src="@drawable/ic_wifi"
                app:layout_constraintStart_toEndOf="@id/distance_value"
                app:layout_constraintTop_toBottomOf="@id/cardone" />

            <TextView
                android:id="@+id/wifi_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/dimen_16"
                android:text="WiFi"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/img_battery"
                app:layout_constraintStart_toEndOf="@id/img_wifi"
                app:layout_constraintTop_toTopOf="@id/img_battery" />
        </LinearLayout>


        <ImageView
            android:id="@+id/call"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/shape_circle"
            android:padding="4dp"
            android:src="@drawable/ic_call_vector"
            app:layout_constraintBottom_toBottomOf="@id/lin_wifi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/lin_wifi" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>




